--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="nacionalidad">Nacionalidad: Mexicana</string>
     <string name="deporte">Deportes: Bici Montaña, Golf, Pilates, Hiking...</string>
     <string name="Instrumentos">Instrumentos: Piano</string>
-    <string name="Musica">Artistas Favoritos: M. Ward, Davendra Bandhart, Carla Morrison </string>
+    <string name="Musica">Artistas Favoritos: M. Ward, Devendra Bandhart, Carla Morrison </string>
+    <string name="favoritos">FAVORITOS: </string>
 
 
 
